<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad3">

    <Button
        android:id="@+id/boton_obten_imagen"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_x="200dp"
        android:layout_y="471dp"
        android:text="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_obten_ObjetoJSON" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="383dp"
        android:layout_height="427dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_x="-3dp"
        android:layout_y="27dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/img1" />

    <TextView
        android:id="@+id/textView"
        style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_x="0dp"
        android:layout_y="355dp"
        android:text="@string/label_1"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/boton_obten_string"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_x="19dp"
        android:layout_y="410dp"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_obten_ObjetoJSON"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.335" />

    <Button
        android:id="@+id/boton_obten_ArregloJSON"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_x="19dp"
        android:layout_y="471dp"
        android:text="@string/btn_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_obten_imagen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_obten_string"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/boton_obten_ObjetoJSON"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_x="200dp"
        android:layout_y="410dp"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.335" />

</androidx.constraintlayout.widget.ConstraintLayout>